<resources>
    <string name="app_name">E-Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="close_note_edit">Close note edit</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="text">Text</string>
    <string name="add_note">Add note</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="set_time">Set time</string>
</resources>