<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.fresh.e_note.fragments.schedule_fragment.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.fresh.e_note.fragments.tasks_fragment.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.fresh.e_note.fragments.notes_fragment.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

</navigation>