<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditActivity"
    android:paddingTop="16dp"
    android:paddingHorizontal="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_edit_text">

        <EditText
            android:id="@+id/note_edit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:autofillHints=""
            android:hint="@string/title"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Large.Header2"
            android:gravity="top"
            tools:text="Title" />

        <ImageButton
            android:id="@+id/note_edit_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:background="@null"
            android:contentDescription="@string/close_note_edit"
            android:src="@drawable/ic_close"
            app:tint="@color/FABIcon" />
    </LinearLayout>

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        tools:text="Text"
        android:hint="@string/text"
        android:textAppearance="@style/TextAppearance.Medium.PlainText"
        android:inputType="textMultiLine"
        android:background="@null"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head" />


    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>